Project

General

Profile

Actions

Bug #63306

open

multisite: objects replicated with compress-encrypted store wrong (compressed) size in the bucket index

Added by Casey Bodley 7 months ago. Updated 6 months ago.

Status:
Pending Backport
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
multisite compression sse backport_processed
Backport:
quincy reef
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

after replication, the bucket index incorrectly uses the compressed size instead of the actual size

tested on two zones with zlib compression enabled, the compress-encrypted zonegroup feature enabled, and a rgw crypt default encryption key configured

primary:

       "rgw.main": {
            "size": 20971520,
            "size_actual": 20971520,
            "size_utilized": 20424,
            "size_kb": 20480,
            "size_kb_actual": 20480,
            "size_kb_utilized": 20,
            "num_objects": 1
        },

~/ceph/build $ s3cmd -c c1.s3cfg ls s3://testbucket
2023-10-24 18:46     20971520  s3://testbucket/20m.iso

~/ceph/build $ s3cmd -c c1.s3cfg info s3://testbucket/20m.iso
s3://testbucket/20m.iso (object):
   File size: 20971520

secondary:

        "rgw.main": {
            "size": 20424,
            "size_actual": 20480,
            "size_utilized": 20424,
            "size_kb": 20,
            "size_kb_actual": 20,
            "size_kb_utilized": 20,
            "num_objects": 1
        }

~/ceph/build $ s3cmd -c c2.s3cfg ls s3://testbucket
2023-10-24 18:46        20424  s3://testbucket/20m.iso

~/ceph/build $ s3cmd -c c2.s3cfg info s3://testbucket/20m.iso
s3://testbucket/20m.iso (object):
   File size: 20971520

the replicated object itself has the correct size and can be downloaded successfully:

~/ceph/build $ s3cmd -c c2.s3cfg get s3://testbucket/20m.iso 20m.iso.out
download: 's3://testbucket/20m.iso' -> '20m.iso.out'  [1 of 1]
 20971520 of 20971520   100% in    0s    44.11 MB/s  done

Related issues 3 (2 open1 closed)

Related to rgw - Bug #57905: multisite: terminate called after throwing an instance of 'ceph::buffer::v15_2_0::end_of_buffer'Pending BackportCasey Bodley

Actions
Copied to rgw - Backport #63451: quincy: multisite: objects replicated with compress-encrypted store wrong (compressed) size in the bucket indexNewCasey BodleyActions
Copied to rgw - Backport #63452: reef: multisite: objects replicated with compress-encrypted store wrong (compressed) size in the bucket indexResolvedCasey BodleyActions
Actions #1

Updated by Casey Bodley 7 months ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 54174
Actions #2

Updated by Casey Bodley 7 months ago

  • Related to Bug #57905: multisite: terminate called after throwing an instance of 'ceph::buffer::v15_2_0::end_of_buffer' added
Actions #3

Updated by Casey Bodley 6 months ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot 6 months ago

  • Copied to Backport #63451: quincy: multisite: objects replicated with compress-encrypted store wrong (compressed) size in the bucket index added
Actions #5

Updated by Backport Bot 6 months ago

  • Copied to Backport #63452: reef: multisite: objects replicated with compress-encrypted store wrong (compressed) size in the bucket index added
Actions #6

Updated by Backport Bot 6 months ago

  • Tags changed from multisite compression sse to multisite compression sse backport_processed
Actions

Also available in: Atom PDF