rgw: fetch_remote_obj() uses uncompressed size for encrypted objects

use the original size from RGW_ATTR_COMPRESSION as the accounted size in
the bucket index for objects that were transferred in their
encrypted/compressed form

Fixes: https://tracker.ceph.com/issues/63306

Signed-off-by: Casey Bodley <cbodley@redhat.com>